--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.1",
     "98.css": "^0.1.20",
+    "bootstrap": "^5.2.3",
     "firebase": "^9.19.1",
     "html2canvas": "^1.4.1",
     "intro.js": "^7.0.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "uuid": "^9.0.0"
